--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.js"></script>
 		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
 
-		<script src="js/controller/home.js?20150717010"></script>
+		<script src="js/controller/home.js?20150719001"></script>
 		<script src="js/ngActivityIndicator.min.js"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/ngActivityIndicator.min.css">
@@ -32,7 +32,7 @@
 
 		</script>
 	</head>
-	<body ng-controller="legoController">
+	<body ng-controller="legoController" data-ng-init="getHardList()">
 		<!-- Google Tag Manager -->
 		<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-P2KH9L"
 		height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -70,7 +70,7 @@
 						<input type="text" class="form-control" placeholder="Lego shop URL ex) http://shop.lego.com/en-DE/B-Wing-75050" aria-describedby="basic-addon2" ng-model="shopUrl">
 						<span class="input-group-btn">
 							<div ng-activity-indicator="CircledWhite"></div>
-							<button ng-show="!AILoading" class="btn btn-info" type="button" ng-click="getPrice()">Get Price!</button>
+							<button class="btn btn-info" type="button" ng-click="getPrice()">Get Price!</button>
 						</span>
 					</div>
 				</p>
@@ -142,8 +142,27 @@
 				 </div>
 					</div>
 				</section>
+				<section id="hard_List" class="inner">
+					<div class="row">
+					  <div class="col-sm-6 col-md-4" ng-repeat="product in hardlist">
+					    <div class="thumbnail">
+								<h4><span class="label label-info">{{product.badgeName}} <span class="badge">{{product.hardCount}}</span></span> <img ng-src="{{product.categoryImage}}"height="25" ></h4>
+					      <img ng-src="{{product.image}}" alt="...">
+					      <div class="caption">
 
-
+					        <h3>{{product.name}}</h3>
+					        <p>카테고리 : {{product.category}}</p>
+					        <p><a href="#top" style="width:100%" class="btn btn-default" role="button" ng-click="viewDetail(product.prodCode)">가격정보</a></p>
+					      </div>
+					    </div>
+					  </div>
+					</div>
+					<div class="row" ng-hide="moreList(hardlist)">
+						  <div class="col-sm-12">
+								<button style="width:100%" type="button" class="btn btn-info" ng-click="getHardList()">more</button>
+							</div>
+					</div>
+				</section
 			</div>
 
 			<!-- FOOTER  -->
