--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 		<meta http-equiv="X-UA-Compatible" content="chrome=1">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta property="fb:app_id" content="401739753336740" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="레고 공홈 가격비교" />
 		<meta property="og:site_name" content="전세계 레고 공식 홈페이지 가격 비교" />
