--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<meta property="fb:app_id" content="401739753336740" />
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="레고 공홈 가격비교" />
+		<meta property="og:url" content="http://smallmiro.github.com" />
 		<meta property="og:site_name" content="전세계 레고 공식 홈페이지 가격 비교" />
 		<meta property="og:image" content="http://smallmiro.github.io/image/lego.png" />
 		<meta property="og:description" content="전세계 레고 공식 홈페이지의 가격비교, 많이 찾는 상품, 품절 등의 상태를 비교해보세요." />
@@ -17,10 +18,8 @@
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.js"></script>
 		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
 
-		<script src="js/controller/home.js?20150720001"></script>
-		<script src="js/ngActivityIndicator.min.js"></script>
+		<script src="js/controller/home.js?20150720002"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
-		<link rel="stylesheet" href="css/ngActivityIndicator.min.css">
 		<title>레고 공홈 가격비교</title>
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -32,8 +31,13 @@
 		  ga('send', 'pageview');
 
 		</script>
+		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
 	</head>
-	<body ng-controller="legoController" data-ng-init="getHardList()">
+	<body ng-controller="legoController" data-ng-init="getHardList()"  style="padding-top: 50px;padding-bottom: 20px;">
 	<script>
 	  window.fbAsyncInit = function() {
 	    FB.init({
@@ -69,12 +73,14 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#">LEGO</a>
+					<a class="navbar-brand" href="#top">Lego 가격비교</a>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
-
-				</div>
-				<!--/.navbar-collapse -->
+          <ul class="nav navbar-nav">
+            <li class="active"><a href="/">Home</a></li>
+            <!--<li><a href="/intro.html">About</a></li>-->
+          </ul>
+        </div><!--/.nav-collapse -->
 			</div>
 		</nav>
 		<!-- HEADER -->
@@ -122,13 +128,24 @@
 							<div class="panel panel-default">
 							<!-- Default panel contents -->
 						   <div class="panel-heading">
-								 <h3><span class="label label-info">{{product.badgeName}}</span> 가격 및 상태 정보 </h3>
+								 <h4><span class="label label-info">{{product.badgeName}}</span> 가격 및 상태 정보 </h4>
 							 </div>
 						   <div class="panel-body">
-								 <blockquote>
-								  <p>카테고리 : {{product.category}}</p>
-								  <footer>item : <cite title="Source Title">{{product.prodCode}}</cite></footer>
-								</blockquote>
+								 <div class="container-fluid">
+								   <div class="row-fluid">
+								     <div class="span10">
+											 <blockquote>
+											  <p>카테고리 : {{product.category}}</p>
+											  <footer>item : <cite title="Source Title">{{product.prodCode}}</cite></footer>
+											</blockquote>
+								     </div>
+								     <div class="span2">
+								       <!--Body content-->
+											 sfasdf
+								     </div>
+								   </div>
+								 </div>
+
 						   </div>
 						   <!-- Table -->
 							 <div class="table-responsive">
@@ -167,11 +184,11 @@
 					<div class="row">
 					  <div class="col-sm-6 col-md-4" ng-repeat="product in hardlist">
 					    <div class="thumbnail">
-								<h4><span class="label label-info">{{product.badgeName}} <span class="badge">{{product.hardCount}}</span></span> <img ng-src="{{product.categoryImage}}"height="25" ></h4>
-					      <img ng-src="{{product.image}}" alt="...">
+								<h4><span class="label label-info">{{product.badgeName}}</span> <img ng-src="{{product.categoryImage}}"height="25" ></h4>
+					      <img ng-src="{{product.image}}">
 					      <div class="caption">
 
-					        <h3>{{product.name}}</h3>
+					        <h4>{{product.name}}</h4>
 					        <p>카테고리 : {{product.category}}</p>
 					        <p><a href="#top" style="width:100%" class="btn btn-default" role="button" ng-click="viewDetail(product.prodCode)">가격정보</a></p>
 					      </div>
@@ -189,6 +206,10 @@
 			<!-- FOOTER  -->
 			<div id="footer_wrap" class="outer">
 				<footer class="inner">
+
+			      <div class="well">
+			        <p>전세계 레고 공식 홈페이지의 가격비교, 많이 찾는 상품, 품절 등의 상태를 비교해보세요.</p>
+			      </div>
 				</footer>
 			</div>
 		</div>
