--- a/index.html
+++ b/index.html
@@ -131,14 +131,14 @@
 								 <h4><span class="label label-info">{{product.badgeName}}</span> 가격 및 상태 정보 </h4>
 							 </div>
 						   <div class="panel-body">
-								   <div class="row-fluid">
-								     <div class="span10">
+								   <div class="row">
+								     <div class="col-sm-8">
 											 <blockquote>
 											  <p>카테고리 : {{product.category}}</p>
 											  <footer>item : <cite title="Source Title">{{product.prodCode}}</cite></footer>
 											</blockquote>
 								     </div>
-								     <div class="span2">
+								     <div class="col-sm-4">
 								       <!--Body content-->
 											 sfasdf
 								     </div>
