--- a/intro.html
+++ b/intro.html
@@ -131,15 +131,7 @@
                   <h4 class="timeline-title">Mussum ipsum cacilds</h4>
                 </div>
                 <div class="timeline-body">
-									<div id="fb-root"></div>
-									<script>(function(d, s, id) {
-									  var js, fjs = d.getElementsByTagName(s)[0];
-									  if (d.getElementById(id)) return;
-									  js = d.createElement(s); js.id = id;
-									  js.src = "//connect.facebook.net/ko_KR/sdk.js#xfbml=1&version=v2.4&appId=401739753336740";
-									  fjs.parentNode.insertBefore(js, fjs);
-									}(document, 'script', 'facebook-jssdk'));</script>
-                </div>
+<div class="fb-page" data-href="https://www.facebook.com/legogonghome" data-width="100%" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/legogonghome"><a href="https://www.facebook.com/legogonghome">레고 공홈 정보</a></blockquote></div></div>
               </div>
             </li>
             <li>
