--- a/intro.html
+++ b/intro.html
@@ -131,7 +131,13 @@
                   <h4 class="timeline-title">Mussum ipsum cacilds</h4>
                 </div>
                 <div class="timeline-body">
-<div class="fb-page" data-href="https://www.facebook.com/legogonghome" data-width="100%" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false"><div class="fb-xfbml-parse-ignore"><blockquote cite="https://www.facebook.com/legogonghome"><a href="https://www.facebook.com/legogonghome">레고 공홈 정보</a></blockquote></div></div>
+									<div class="fb-page col-sm-12" data-href="https://www.facebook.com/legogonghome"  data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false">
+										<div class="fb-xfbml-parse-ignore">
+											<blockquote cite="https://www.facebook.com/legogonghome">
+											<a href="https://www.facebook.com/legogonghome">레고 공홈 정보</a>
+											</blockquote>
+										</div>
+									</div>
               </div>
             </li>
             <li>
