--- a/intro.html
+++ b/intro.html
@@ -114,21 +114,11 @@
                 </div>
               </div>
             </li>
-            <li>
-              <div class="timeline-badge danger"><i class="glyphicon glyphicon-credit-card"></i></div>
-              <div class="timeline-panel">
-                <div class="timeline-heading">
-                  <h4 class="timeline-title">Mussum ipsum cacilds</h4>
-                </div>
-                <div class="timeline-body">
-                  <p>Mussum ipsum cacilds, vidis litro abertis. Consetis adipiscings elitis. Pra lá , depois divoltis porris, paradis. Paisis, filhis, espiritis santis. Mé faiz elementum girarzis, nisi eros vermeio, in elementis mé pra quem é amistosis quis leo. Manduma pindureta quium dia nois paga. Sapien in monti palavris qui num significa nadis i pareci latim. Interessantiss quisso pudia ce receita de bolis, mais bolis eu num gostis.</p>
-                </div>
-              </div>
-            </li>
             <li class="timeline-inverted">
+							<div class="timeline-badge danger"><i class="glyphicon glyphicon-credit-card"></i></div>
               <div class="timeline-panel">
                 <div class="timeline-heading">
-                  <h4 class="timeline-title">Mussum ipsum cacilds</h4>
+                  <h4 class="timeline-title">페이스북 페이지 오픈</h4>
                 </div>
                 <div class="timeline-body">
 									<div class="fb-page col-sm-12" data-href="https://www.facebook.com/legogonghome"  data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true" data-show-posts="false">
