--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@
 
 			      <div class="well">
 			        <p>전세계 레고 공식 홈페이지의 가격비교, 많이 찾는 상품, 품절 등의 상태를 비교해보세요.</p>
+							<p><div class="fb-follow" data-href="https://www.facebook.com/legogonghome" data-layout="standard" data-show-faces="true"></div></p>
 			      </div>
 				</footer>
 			</div>
