--- a/intro.html
+++ b/intro.html
@@ -157,14 +157,16 @@
         </ul>
     </div>
 
-			<!-- FOOTER  -->
-			<div id="footer_wrap" class="outer">
-				<footer class="inner">
-            <div class="well">
-              <p></p>
-            </div>
-				</footer>
-			</div>
+		<!-- FOOTER  -->
+		<div id="footer_wrap" class="outer">
+			<footer class="inner">
+
+					<div class="well">
+						<p>전세계 레고 공식 홈페이지의 가격비교, 많이 찾는 상품, 품절 등의 상태를 비교해보세요.</p>
+						<p><div class="fb-follow" data-href="https://www.facebook.com/legogonghome" data-layout="standard" data-show-faces="true"></div></p>
+					</div>
+			</footer>
+		</div>
 		</div>
 	</body>
 </html>
