--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 				<div id="navbar" class="navbar-collapse collapse" collapse="navbarCollapsed">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">Home</a></li>
-            <li><a href="/intro.html">About</a></li>
+            <li><a href="intro.html">About</a></li>
           </ul>
         </div><!--/.nav-collapse -->
 			</div>
