--- a/intro.html
+++ b/intro.html
@@ -81,7 +81,7 @@
 			<div id="navbar" class="navbar-collapse collapse" collapse="navbarCollapsed">
 				<ul class="nav navbar-nav">
 					<li><a href="/">Home</a></li>
-					<li class="active"><a href="/intro.html">About</a></li>
+					<li class="active"><a href="intro.html">About</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
