--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
 			<div class="container">
 				<header class="inner">
 					<div class="row">
-					  <div class="col-xs-12 col-sm-6 col-md-8"><h2 id="project_title">레고 공홈 가격비교 <small>Let's search!!</small></h2></div>
-						<div class="fb-like col-xs-6 col-md-4" data-href="http://www.getlego.me" data-layout="standard" data-action="recommend" data-show-faces="true" data-share="true"></div>
+					  <div class="col-md-12"><h2 id="project_title">레고 공홈 가격비교 <small>Let's search!!</small></h2></div>
+
 					</div>
 
 				</header>
@@ -122,7 +122,7 @@
 					</center>
 				</p>
 				<p class="text-right">
-
+					<div class="fb-like col-md-12" data-href="http://www.getlego.me" data-layout="standard" data-action="recommend" data-show-faces="true" data-share="true"></div>
 				</p>
 			</div>
 		</div>
