--- a/index.html
+++ b/index.html
@@ -163,8 +163,7 @@
 								<div class="panel-body">
 
 							    <div class="thumbnail">
-							      <img ng-if="null == product.asin" ng-src="{{product.image}}">
-										<img ng-if="null != product.asin" error-src="{{product.image}}" ng-src="http://ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN={{product.asin}}&Format=_SL250_&ID=AsinImage&MarketPlace=US&ServiceVersion=20070822&WS=1&tag=legospriccomp-20">
+										<img ng-src="{{product.image}}" error-src="http://ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN={{product.asin}}&Format=_SL250_&ID=AsinImage&MarketPlace=US&ServiceVersion=20070822&WS=1&tag=legospriccomp-20">
 							      <div class="caption">
 							        <h3>{{product.name}}</h3>
 											<p><h6>http://item.getlego.me/detail/{{product.prodCode}}</h6></p>
@@ -172,7 +171,7 @@
 												<!--div facebook class="facebookShare" data-title='{{product.name}}' data-picture-url='{{product.image}}' data-url='http://item.getlego.me/detail/{{product.prodCode}}' data-shares='shares'>{{ shares }}</div-->
 
 											</p>
-							        <p ng-if="null == product.asin">상품 이미지의 저작권은 shop.lego.com이 가지고 있습니다.</p>
+							        <p>상품 이미지의 저작권은 shop.lego.com이 가지고 있습니다.</p>
 											<p>
 												<blockquote>
 												 <p>
@@ -280,8 +279,7 @@
 					  <div class="col-sm-6 col-md-4" ng-repeat="product in hardlist">
 					    <div class="thumbnail">
 								<h4><span class="label label-info">{{product.badgeName}}</span> <img ng-src="{{product.categoryImage}}" height="25" ></h4>
-					      <img style="height:263px;" ng-if="null == product.asin" ng-src="{{product.image}}">
-								<img style="height:263px;" ng-if="null != product.asin" error-src="{{product.image}}" ng-src="http://ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN={{product.asin}}&Format=_SL250_&ID=AsinImage&MarketPlace=US&ServiceVersion=20070822&WS=1&tag=legospriccomp-20">
+								<img style="height:263px;" ng-src="{{product.image}}" error-src="http://ws-na.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN={{product.asin}}&Format=_SL250_&ID=AsinImage&MarketPlace=US&ServiceVersion=20070822&WS=1&tag=legospriccomp-20">
 								<div class="caption" style="height:370px;">
 
 					        <h4>{{product.name}}</h4>
@@ -292,6 +290,7 @@
 										 <!--
 										 <div facebook class="facebookShare" data-title='{{product.name}}' data-picture-url='{{product.image}}' data-url='http://item.getlego.me/detail/{{product.prodCode}}' data-shares='shares'>{{ shares }}</div>
 									 		-->
+
 										 <div class="fb-share-button" data-href="http://item.getlego.me/detail/{{product.prodCode}}" data-layout="button_count"></div>
 									 </p>
 									 <p>
