--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 			</div>
 		</div>
 		<div class="container" style="padding-bottom: 20px">
-			<div id="add_content_wrap" class="outer" style="padding-bottom: 20px;cursor: pointer;border: 1px solid #eee; border-radius: 5px;" ng-click="clickAdd(''{{ link }}'')">
+			<div id="add_content_wrap" class="outer" style="padding-bottom: 20px;cursor: pointer;border: 1px solid #eee; border-radius: 5px;" ng-click="clickAdd(link)">
 				<div class="row">
 				  <div class="col-xs-4 col-md-2 text-center" style="padding-top: 10px;padding-bottom: 10px;">
 				      <img border="0" ng-src="{{ img }}" >
