--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
 
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.js"></script>
 		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
+		<script src="/js/Chartjs.js"></script>
+		<script src="/js/angular-chart.js"></script>
 
-
-		<script src="js/controller/home.js?20150819001"></script>
+		<script src="/js/controller/home.js?20150819001"></script>
 		<link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="/css/angular-chart.css">
 		<!--
 		<script src="js/angular-socialshare.min.js?20150728005"></script>
 		<link href="css/angular-socialshare.min.css?20150723007" rel="stylesheet">
@@ -201,7 +203,19 @@
 									</div>
 							</div>
 						</div>
-						<div class="col-sm-12 col-md-12">
+						<div class="col-sm-12 col-md-8">
+						  <div class="panel panel-default">
+						    <div class="panel-heading">
+						    <h4>가격 변화</h4>
+						    </div>
+						    <div class="panel-body">
+
+						    </div>
+						  </div>
+						</div>
+					</div>
+					<div class="row" ng-repeat="product in products">
+						<div class="col-sm-12 col-md-8">
 							<div class="panel panel-default">
 							<!-- Default panel contents -->
 						   <div class="panel-heading">
