--- a/index2.html
+++ b/index2.html
@@ -18,7 +18,7 @@
 
 		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.js"></script>
 		<script src="http://angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
-		<script src="/js/Chartjs.js"></script>
+		<script src="/js/Chart.js"></script>
 		<script src="/js/angular-chart.js"></script>
 
 		<script src="/js/controller/home.js?20150819001"></script>
